Agrego últimos temas de la materia

--- a/ApunteEstructuras.tex
+++ b/ApunteEstructuras.tex
@@ -27,9 +27,13 @@
 	\hfill\includegraphics[width=6cm]{logofiuba.jpg}
     \centering
     \vfill
-    \Huge \textbf{Apuntes de estructuras y procesos organizacionales}
+    \includegraphics[width=8cm]{imagenes/logos.jpg}
+    
+    \Huge \textbf{Apuntes de} 
+    
+    \Huge \textbf{estructuras y procesos organizacionales}
     \vskip2cm
-    \Large [9139] Estructuras y procesos organizacionales\\
+    \Large [9139]\\
     1C 2021
     \vfill
     \begin{tabular}{ | l | } % Datos del alumno
@@ -47,6 +51,18 @@
 
 \section{Introducción}\label{sec:intro}
 El presente archivo contiene los apuntes que fueron tomados a lo largo de la cursada de la materia estructuras y procesos organizacionales (9139). Estos apuntes surgen de la bibliografía otorgada por la materia y anotaciones de clase. 
+
+\subsection*{Recomendaciones}
+
+La materia es sencilla y no es pesada. En palabras de la profesora, 'no es el filtro de nadie'. 
+
+Para las teóricas si se puede conviene leer los apuntes que están como bibliografía para estar mas en tema para la clase.
+
+Respecto al parcial, (en virtualidad este cuatrimestre) consistió en algunas preguntas multiple choice que se responden fácilmente siguiendo la materia, y después unos ejercicios prácticos. Los ejercicios fueron uno de costos, otro sobre la empresa del TP (armarse alguna parte del proceso de un presupuesto), y otro que puede ser de cualquier tema visto. Para los ejercicios que no son de la empresa, conviene hacerse parte de la guía de ejercicios (la de costos y algunos de la principal) (puede ser que tomen un ejercicio de ahí o uno similar).
+
+Del trabajo practico de la empresa, consiste en plantear una empresa desde el comienzo hasta que se pone en marcha. Determinan la razón de ser de la empresa, análisis estratégicos, los dimensionamientos, procesos de producción, costos y demás partes del apunte. Elijan una empresa que abarque algún área que les interese.
+
+\newpage
 
 \section*{Primera clase}
 
@@ -209,6 +225,8 @@ Es la imagen deseada de la empresa en el futuro. Para definir una visión, esta 
 Responsabilidad de la alta dirección.
 
 La visión debe incluir a todos los miembros de la organización, o sea que debe ser compartida. La visión compartida crea un lazo entre personas, proporciona una sensación de propósito y coherencia en todas las actividades que desarrolla la organización. La eficacia de la visión dependerá de que todos los miembros de la organización participen conjuntamente en su creación. 
+
+\newpage
 
 \subsection{Pestelco}
 Las empresas son sistemas abiertos que co-evolucionan con el entorno. Hay herramientas que permiten diagnosticar, una de ellas es Pestelco. Son 7 vectores fuerzas motores de cambio del entorno. No es una imagen actual, son vectores que permiten imaginar a futuro, hacia donde imaginamos que se mueve la economía, sociedad, política, etc. A futuro, ¿hacia donde va cada variable?
@@ -467,6 +485,7 @@ Tiene en cuenta el dinero necesario para que un conjunto de edificios, maquinas 
 
 La puesta en régimen es el costo de poner en marcha todas las máquinas, las ineficiencias del inicio de producción, costo de adiestramiento del equipo humano. La sumatoria de todas las anormalidades valorizadas económicamente constituyen el capital de puesta en régimen.
 
+\newpage
 \section*{Cuarta clase}
 
 \section{Diseño organizacional}
@@ -587,6 +606,7 @@ Agrupamiento por necesidades de los clientes, no se divide el organigrama por pr
 
 El agrupamiento geográfico por mercados, una parte para Europa, otro para América,.. Esto es desde el punto de vista de la demanda también. 
 
+\newpage
 \section*{Quinta clase}
 \section{Operaciones y procesos}
 Son estas tareas las que dan vida a la organización. Cuando una empresa compra, vende, paga, cobra o produce lo hace a partir de operaciones puntuales (también llamadas transacciones), las cuales se llevan a cabo precisamente por una serie de tareas realizadas por distintas personas.
@@ -1620,5 +1640,151 @@ producto terminado, caja, deudores por venta) y los nuevos pasivos (proveedores,
 sumado a las pérdidas o ganancias previstas durante el ejercicio, podremos construir nuestro nuevo balance, 
 que será el Balance Proyectado. De esta manera hemos realizado el Presupuesto Económico (Cuadro de 
 Resultados Proyectado) y el Financiero (Cash Flow Proyectado), ambos resumidos en el Balance Proyectado.
+
+
+
+%
+% eficiente -> menor cantidad de recursos usados
+% eficaz -> transmitir algo y que realmente le llegue al otro 
+%
+% a quien le voy a hablar, cual es mi proposito, cual es mi apertura, que puntos toco, cuales son mis evidencias/datos, cual es mi cierre
+% APERTURA afirmaciones imprevistas, pregunta basica, incidente que dramatice la idea
+% PRESENTACION DE SOPORTE O EVIDENCIA ejemplos, estadisticas, testimonios
+% CIERRE repetir puntos importantes, expresion motivadora, cita relevante, hablar a nivel personal - no decir gracias o dudas directamente
+% ESPACIO DE PREGUNTAS dejar a la vista la ultima filmina con resumen de los puntos mas importantes, si no preguntan espontaneamente plantear una pregunta, resumir lo esencial de la exposicion e improvisar un resumen de este espacio 
+
+% presentacion = orador, no el material que se utiliza
+% se usa para datos dificiles de comprender, mayor retencion de listados, explicar procesos complicados, ayuda a retener la informacion presentada
+% 6x6 - seis palabras por linea, seis lineas por visual - evitar el abuso de bullets
+% verificar ortografia, la vista se distrae con el error
+% tamaño de tipografia, 24 es la minima - 36 recomendada - 44 titulos - 54 impacto, usar mayus y minus - no todo mayus
+% armar un indice de la presentacion (en los cambios ponerlo devuelta y remarcar el tema), hacer referencia al indice continuamente, titulo fijo en las diapos si tiene el mismo tema, anticiparse a las preguntas
+% poner mas a la izq que centrado lo escrito
+
+\section*{Doceava clase}
+\section{Negociación}
+
+Es el proceso en el cual las personas procuran cambiar una relación social. Dos o mas partes independientes con diferentes intereses intentan alcanzar un acuerdo sobre uno o varios temas. Se van aproximando realizando concesiones mutuas. El enfoque deseado es el de mantener relaciones a largo plazo. Diariamente nos comprometemos en negociaciones.
+
+\subsection*{PIOC}
+Separar las Persoas del problema
+
+Concentrese en los Intereses y no en las posiciones
+
+Trabaje en generar Opciones de beneficio mutuo.
+
+Resultados basados en Criterios objetivos.
+
+\subsection*{El negociador}
+La negociación comienza antes de que las partes se encuentren, la primera etapa es la preparación del negociador.
+
+\begin{itemize}
+    \item Nunca olvida que la negociación es un proceso continuo que a veces concluye mucho tiempo después de que otros lo han considerado concluido.
+    \item Su criterio es amplio.
+    \item Es flexible con los objetivos e intereses durante el proceso.
+    \item Siempre está atento a las necesidades personales de sus oponentes.
+    \item Busca soluciones que aumenten la armonía.
+    \item Nunca dice a su oponente que está equivocado.
+    \item Es competitivo.
+    \item Sabe cuándo detenerse. Intuye que se ha alcanzado un punto crítico de la negociación donde él debe ceder la satisfacción de la última necesidad del oponente, para que ambos concluyan satisfechos.
+\end{itemize}
+
+\subsection*{La situación a acordar}
+Es la razón de la negociación, debe definirse que es lo que se esta negociando precisamente. Ambas partes deben coincidir en la razón para iniciar el proceso.
+
+El objetivo es el resultado buscado de la negociación. Siempre debe ser mensurable en valor absoluto o por comparación.
+
+\subsection*{Preparación}
+\begin{itemize}
+    \item Posiciones: ¿Sabemos exactamente desde dónde vamos hacia nuestro objetivo? ¿Creemos conocer dónde están ubicados nuestros oponentes?
+    \item Presunciones: Optimizar el uso de las presunciones en el proceso de la negociación es eliminar las propias y conocer las ajenas. Debemos esforzarnos en poner a prueba nuestras presunciones y profundizar el conocimiento de las de nuestros adversarios. Debemos buscar los hechos y negociar sólo sobre ellos. Los hechos confirmados en común son el núcleo del acuerdo negociado.
+    \item Historia:  ¿Su oponente ha realizado negociaciones similares? ¿Quiénes las han hecho con él? ¿Han sido exitosas? ¿Si fracasaron, por qué? Un negociador aprende más de los fracasos propios y ajenos que de los éxitos.
+    \item Agenda: Son los temas de negociación, los ordenes y tiempos.
+    \item Identificación de las Necesidades: La satisfacción de las necesidades personales motiva la mayoría de las acciones humanas. Durante el proceso de negociación conocer las necesidades del oponente es tan importante como reconocer las propias. Tener necesidades y querer satisfacerlas es el común denominador en las negociaciones.
+\end{itemize}
+
+\subsection*{Desarrollo}
+Las tácticas y la estrategia son acciones planeadas para cambiar relaciones hasta alcanzar el objetivo
+de la negociación. Las tácticas buscan lograr objetivos de coyuntura. La estrategia, alcanzar el objetivo
+de largo plazo. Están las tácticas relacionadas con el tiempo y las del lugar.
+
+Del tiempo:
+\begin{itemize}
+    \item Paciencia: Decidir cuando es el mejor momento para responder.
+    \item Sorpresa: Realizar un cambio repentino de estilo.
+    \item 'Compás de la musica': Actuar con las acciones con la musica ambiental.
+    \item Hecho consumado:  Avanzar algunos pasos inesperados que parezcan irreversibles.
+    \item Aparente retirada: Retirarse sin aviso y regresar cuando convenga sin aviso.
+    \item Inversión: Realizar una acción opuesta al avance esperado.
+    \item Limites: Fijar limites de tiempo para alcanzar lo deseado.
+\end{itemize}
+
+Del lugar:
+\begin{itemize}
+    \item Participación: Acuerde el apoyo de nuevas personas en la negociación.
+    \item Asociación: Vincule con su posición a personas prominentes, famosas, referentes sociales.
+    \item Disociación: Relacione una idea opuesta a la suya con personajes antisociales, estilos ofensivos a las buenas costumbres, filosofías foráneas, riqueza y pobreza.
+    \item Estadística orientada: Utilice datos convenientes originados en una muestra elegida, extendiendo el resultado a todo el universo.
+    \item Amenaza ficticia: Esfuércese por amenazar una vez y luego siempre actúe como si la amenaza estuviese vigente.
+    \item Efecto dominó: Induzca la certeza de que si ese hecho sucede se precipitará una cadena de hechos similares.
+    \item Táctica del salame: Aduéñese de una pequeña concesión y luego de otra y de otra. También puede ceder trozo por trozo en lugar de una concesión entera. Alcance el todo agregando, nunca quite.
+    \item Cambiar de lugar el problema
+    \item Menú de opciones limitadas: ¿Prefiere está opción (que me conviene) o esta otra opción (que no le conviene)?
+    \item Vuélvase irracional: Grite, gesticule, irrítese, dramatice.
+    \item Sepa cuando callar. Aprenda a ceder
+\end{itemize}
+
+\subsection*{Preguntas}
+El camino más simple para conocer los pensamientos de su oponente es preguntárselos a él. Las preguntas deben ser simples y directas.
+
+Las funciones que pueden buscar son:
+\begin{itemize}
+    \item Iniciar una conversación: ¿Lloverá? ¿De qué raza es su perro?
+    \item Obtener información: ¿Cuánto hace que se dedica a este negocio?
+    \item Dar información: ¿Usted podría vendernos algunos metros más?
+    \item Inducir al oponente a considerar una opción: ¿No le parece que a sus socios les gustaría más el segundo contrato?
+    \item ¿Y si...? Maravillosa pregunta, una llave del universo de opciones: ¿Y si en lugar de tres cuotas pagamos en efectivo?
+    \item Impulsar una conclusión del trato: ¿Le parece bien que le entregue el primer lote mañana?
+\end{itemize}
+
+\subsection*{Climas}
+Todos somos responsables por los climas físicos y emocionales que nos rodean, en las negociaciones se pueden clasificar como defensivos o sustentadores.
+
+Climas defensivos:
+\begin{itemize}
+    \item Evaluación (acusar, corregir, criticar).
+    \item Control (restringir, amenazar).
+    \item Neutralidad (ser pasivo).
+    \item Superioridad (no se relaciona, busca crear dependencia).
+    \item Certeza (maestro, dogmático).
+\end{itemize}
+
+Climas sustentables:
+\begin{itemize}
+   \item Pedir información sobre los hechos. Los hechos no son parte de la negociación. Debería coincidirse sobre ellos y eliminar su discusión durante el proceso.
+   \item Problema mutuo (cooperación, trabajo compartido): Deben identificarse los problemas comunes y trabajar sobre ellos; pueden redefinirse varias veces.
+   \item Empatía (identificación del problema, comprensión, confianza). Involucre a todos en el problema y comprométalos en la ejecución de la solución.
+   \item Igualdad (respeto, confianza, reciprocidad).
+   \item Provisionalidad (todo puede mejorarse, deseo de experimentar).
+\end{itemize}
+
+\subsection*{Comunicaciones no verbales}
+Hay que prestar atención a las actitudes emocionales que se transmiten en forma no verbal. La inconsistencia de las palabras con los gestos indica sentimientos o necesidades ocultas.
+
+
+\subsection*{Método de negociación de Cohen}
+Hay cuatro elementos presentes, el espacio (donde se desarrollara la negociación), la información, el tiempo, y el poder.
+
+\subsection*{Método de negociación de Harvard}
+Dos desarrollos del campo de la matemática aplicada a la economía son esenciales en nuestras
+negociaciones: a) En Teoría de Juegos se define el “equilibrio de Nash” como un conjunto de
+estrategias tal que ningún jugador se beneficia cambiando su estrategia mientras los otros no cambien
+la suya y b) El concepto de “óptimo de Pareto”, donde una situación alcanza esa condición si se cumple
+que no es posible beneficiar a más elementos de un sistema sin perjudicar a otros. Ambos conceptos
+se funden en el clásico caso del “Dilema del Prisionero” donde el equilibrio de Nash no es un óptimo
+de Pareto
+
+El metodo busca separar a las personas del problema y concentrarse en los intereses, no en las posiciones. Inventar opciones de mutuo beneficio, proponer trabajar sobre criterios objetivos y determinar la mejor alternativa a un acuerdo negociado (MAAN) (el piso del cual no podemos bajar)
+
 
 \end{document}
